# VectorWaves

./: .gitignore  404.html  README.md  README_PyPi.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  wavelab_diff_v1.0.0.txt
api/config/: index.html
api/core/: index.html
api/singularities/: index.html
api/utils/: index.html
docs/: index.md  physics.md
docs/api/: config.md  core.md  singularities.md  utils.md
docs/tutorials/: Scalar_tutorial.ipynb  Vector_tutorial.ipynb
physics/: index.html
search/: search_index.json
src/vectorwaves/: __init__.py  beam_stuff.py  config_stuff.py  engine_stuff.py
src/vectorwaves/backends/: cupy_backend.py  numba_backend.py
src/wavelab/: __init__.py  config_stuff.py  singularities.py  version.py
src/wavelab/backends/: numpy_backend.py
tutorials/Scalar_tutorial/: index.html
tutorials/Vector_tutorial/: index.html
