[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorwaves"
dynamic = ["version"]
description = "Plane Wave Superposition toolkit"
authors = [
  { name = "Mayank Soni" }
]
readme = "README_PyPi.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# CORE DEPENDENCIES
# These are strictly required for the physics pipeline to function.
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "numba>=0.59.0" 
]

[project.optional-dependencies]
# VISUALIZATION: Plotting k-space, profiles, and tutorials
viz = [
  "matplotlib>=3.7.0",
  "pyvista>=0.40.0"
]

# PROGRESS: Console loading bars
progress = [
  "tqdm>=4.65.0"
]

# GPU: CuPy for CUDA 12.x (Note: Users with AMD or older CUDA will need to install their specific cupy build)
gpu = [
  "cupy-cuda12x>=12.0.0"
]

[tool.setuptools.dynamic]
version = { attr = "vectorwaves.version.current_version_str" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/1Rayokelvin/VectorWaves"
Repository = "https://github.com/1Rayokelvin/VectorWaves"
Issues = "https://github.com/1Rayokelvin/VectorWaves/issues"
Documentation = "https://1rayokelvin.github.io/VectorWaves" 